--- a/NotifyMe.API/Views/Events/Index.cshtml
+++ b/NotifyMe.API/Views/Events/Index.cshtml
@@ -68,9 +68,9 @@
 @section Scripts
 {
     <script src="~/js/events.js" asp-append-version="true"></script>
-    <script>
+@*     <script>
          document.addEventListener("DOMContentLoaded", function () {
                     fetchingAll();
          });
-    </script>
+    </script> *@
 }
