Updated editing User and migration

--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -25,14 +25,10 @@
             <i class='bx bx-menu' id="header-toggle"></i>
         </div>
         <div class="header_img">
-            @if (user!.Avatar != "")
-            {
-                <img src="@user.Avatar" alt="@user.UserName">
-            }
-            else
-            {
-                <img src="" alt="@user.UserName">
-            }
+          @if (user != null)
+          {
+              <img src="@user.Avatar" alt="@user.UserName">
+          }
         </div>
     </header>
     <div class="l-navbar" id="nav-bar">
