--- a/NotifyMe.API/Views/Groups/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Groups/PartialViews/DetailsPartialView.cshtml
@@ -33,7 +33,15 @@
                             <textarea asp-for="Description" class="form-control" id="Description"></textarea>
                         </div>
                     </div>
-                </div>          
+                </div>
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="PriorityType" class="control-label">Priority</label><br/>
+                            <select asp-for="PriorityType" asp-items="ViewBag.Priorities"></select>
+                        </div>
+                    </div>
+                </div>
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
