--- a/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
@@ -22,8 +22,8 @@
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="Id" class="control-label"></label>
-                            <input asp-for="Id" class="form-control" id="Id" value="@Model.Id" readonly>
+                            <label asp-for="GroupId">Group</label><br/>
+                            <select asp-for="GroupId" asp-items="ViewBag.Groups" readonly></select>
                         </div>
                     </div>
                     <div class="col">
