--- a/NotifyMe.API/Views/Users/PartialViews/EditPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/EditPartialView.cshtml
@@ -23,8 +23,8 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Id" class="control-label"></label>
-                                <input asp-for="Id" class="form-control" id="Id" value="@Model.Id">
+                                <label asp-for="GroupId">Group</label><br/>
+                                <select asp-for="GroupId" asp-items="ViewBag.Groups"></select>
                             </div>
                         </div>
                         <div class="col">
