--- a/NotifyMe.API/Views/Changes/PartialViews/CreatePartialView.cshtml
+++ b/NotifyMe.API/Views/Changes/PartialViews/CreatePartialView.cshtml
@@ -16,15 +16,15 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="ChangeType" class="control-label">ChangeType</label>
-                                <select asp-for="ChangeType" asp-items="ViewBag.ChangeTypes"></select>
+                                <label asp-for="ChangeType" class="form-label">ChangeType</label>
+                                <select asp-for="ChangeType" asp-items="ViewBag.ChangeTypes" class="form-select"></select>
                             </div>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="ChangeDescription" class="control-label"></label>
+                                <label asp-for="ChangeDescription" class="form-label"></label>
                                 <textarea asp-for="ChangeDescription" class="form-control" id="ChangeDescription"></textarea>
                             </div>
                         </div>
