--- a/NotifyMe.API/Views/Account/Login.cshtml
+++ b/NotifyMe.API/Views/Account/Login.cshtml
@@ -16,17 +16,17 @@
                 <form asp-action="Login" asp-controller="Account" asp-antiforgery="true" method="post" class="form" role="form" autocomplete="off" id="formLogin">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group mb-3">
-                        <label asp-for="UserName" class="control-label"></label>
+                        <label asp-for="UserName" class="form-label"></label>
                         <input asp-for="UserName" class="form-control"/>
                         <span asp-validation-for="UserName" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
-                        <label asp-for="Password" class="control-label"></label>
+                        <label asp-for="Password" class="form-label"></label>
                         <input asp-for="Password" class="form-control"/>
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3 form-check">
-                        <label class="custom-control custom-checkbox">
+                        <label class="form-label custom-checkbox">
                             <input type="checkbox" class="custom-control-input">
                             <span class="custom-control-indicator"></span>
                             <span class="custom-control-description small text-dark">Remember me on this computer</span>
@@ -36,7 +36,7 @@
                         <input type="submit" value="Sign in" class="btn btn-primary" id="btnLogin"/>
                     </div>
                     <div class="col">
-                        <a asp-controller="Account" asp-action="Register" class="">
+                        <a asp-controller="Account" asp-action="Register" class="form-label">
                             Register as a new user
                         </a>
                     </div>
