--- a/NotifyMe.API/Views/Configurations/Index.cshtml
+++ b/NotifyMe.API/Views/Configurations/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.EntityFrameworkCore.Query
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 @inject RoleManager<IdentityRole> roleManager;
@@ -6,7 +7,7 @@
     var user = await UserManager.GetUserAsync(User);
 }
 
-@model ICollection<Configuration>
+@model IIncludableQueryable<Configuration, Group>
 
 @{
     Layout = "_Layout";
