--- a/NotifyMe.API/Views/Configurations/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Configurations/PartialViews/DetailsPartialView.cshtml
@@ -9,6 +9,7 @@
 @{
     ViewBag.Title = "Preview";
     Layout = "_Layout";
+    int count = 1;
 }
 <div class="modal fade" id="modal-details" tabindex="-1" aria-labelledby="modalDetailsLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg p-5">
@@ -21,41 +22,69 @@
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="ChangeType" class="control-label"></label>
-                            <input asp-for="ChangeType" class="form-control" id="ChangeType">
+                            <label asp-for="Group!.Name" class="form-label"></label>
+                            <input asp-for="Group!.Name" class="form-control" id="Group.Name" readonly/>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="PriorityType" class="form-label"></label>
+                            <input asp-for="PriorityType" class="form-control" id="PriorityType" readonly/>
                         </div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="PriorityType" class="control-label"></label>
-                            <textarea asp-for="PriorityType" class="form-control" id="PriorityType"></textarea>
+                            <label asp-for="ChangeType" class="form-label"></label>
+                            <input asp-for="ChangeType" class="form-control" id="ChangeType" readonly>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="Threshold" class="form-label"></label>
+                            <input asp-for="Threshold" class="form-control" id="Threshold" readonly/>
                         </div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="Threshold" class="control-label"></label>
-                            <textarea asp-for="Threshold" class="form-control" id="Threshold"></textarea>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label asp-for="Message" class="control-label"></label>
-                            <textarea asp-for="Message" class="form-control" id="Message"></textarea>
+                            <label asp-for="Message" class="form-label"></label>
+                            <textarea asp-for="Message" class="form-control" id="Message" readonly></textarea>
                         </div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="Group!.Name" class="control-label"></label>
-                            <textarea asp-for="Group!.Name" class="form-control" id="Group.Name"></textarea>
+                            <h5>Events</h5>
+                            <table class="table table-hover">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Timestamp</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                @foreach (var item in Model.Events)
+                                {
+                                    <tr data-row=">@item.Id" readonly>
+                                        <th scope="row">@count</th>
+                                        <td>
+                                            <a class="btn link-primary p-0" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.EventName</a>
+                                        </td>
+                                        <td>@item.EventDescription</td>
+                                        <td>@item.Timestamp</td>
+                                    </tr>
+                                    count++;
+                                }
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="modal-footer">
