--- a/NotifyMe.API/Views/Configurations/PartialViews/EditPartialView.cshtml
+++ b/NotifyMe.API/Views/Configurations/PartialViews/EditPartialView.cshtml
@@ -23,27 +23,27 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="ChangeType" class="control-label">ChangeType</label>
-                                <select asp-for="ChangeType" asp-items="ViewBag.ChangeTypes"></select>
+                                <label asp-for="GroupId" class="form-label">Group</label>
+                                <select asp-for="GroupId" asp-items="ViewBag.Groups" class="form-select"></select>
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="PriorityType" class="control-label">Priority</label>
-                                <select asp-for="PriorityType" asp-items="ViewBag.Priorities"></select>
+                                <label asp-for="PriorityType" class="form-label">Priority</label>
+                                <select asp-for="PriorityType" asp-items="ViewBag.Priorities" class="form-select"></select>
                             </div>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="GroupId">Group</label>
-                                <select asp-for="GroupId" asp-items="ViewBag.Groups"></select>
+                                <label asp-for="ChangeType" class="form-label">ChangeType</label>
+                                <select asp-for="ChangeType" asp-items="ViewBag.ChangeTypes" class="form-select"></select>
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Threshold" class="control-label"></label>
+                                <label asp-for="Threshold" class="form-label"></label>
                                 <input asp-for="Threshold" class="form-control" id="Threshold">
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Message" class="control-label"></label>
+                                <label asp-for="Message" class="form-label"></label>
                                 <textarea asp-for="Message" class="form-control" id="Message"></textarea>
                             </div>
                         </div>
