--- a/NotifyMe.API/Views/Groups/PartialViews/CreatePartialView.cshtml
+++ b/NotifyMe.API/Views/Groups/PartialViews/CreatePartialView.cshtml
@@ -16,7 +16,13 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Name" class="control-label"></label>
+                                <label asp-for="PriorityType" class="form-label">Priority</label><br/>
+                                <select asp-for="PriorityType" asp-items="ViewBag.Priorities" class="form-select"></select>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="Name" class="form-label"></label>
                                 <input asp-for="Name" class="form-control" id="Name">
                             </div>
                         </div>
@@ -24,16 +30,8 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Description" class="control-label"></label>
+                                <label asp-for="Description" class="form-label"></label>
                                 <textarea asp-for="Description" class="form-control" id="Description"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                            <div class="form-group">
-                                <label asp-for="PriorityType" class="control-label">Priority</label><br/>
-                                <select asp-for="PriorityType" asp-items="ViewBag.Priorities"></select>
                             </div>
                         </div>
                     </div>
