--- a/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
@@ -22,13 +22,13 @@
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="GroupId">Group</label><br/>
-                            <select asp-for="GroupId" asp-items="ViewBag.Groups" readonly></select>
+                            <label asp-for="GroupId" class="form-label">Group</label>
+                            <select asp-for="GroupId" asp-items="ViewBag.Groups" class="form-select" readonly></select>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="UserName" class="control-label"></label>
+                            <label asp-for="UserName" class="form-label"></label>
                             <input asp-for="UserName" class="form-control" id="UserName" value="@Model.UserName" readonly>
                         </div>
                     </div>
@@ -36,13 +36,13 @@
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="FirstName" class="control-label"></label>
+                            <label asp-for="FirstName" class="form-label"></label>
                             <input asp-for="FirstName" class="form-control" id="FirstName" value="@Model.FirstName" readonly>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="LastName" class="control-label"></label>
+                            <label asp-for="LastName" class="form-label"></label>
                             <input asp-for="LastName" class="form-control" id="LastName" value="@Model.LastName" readonly>
                         </div>
                     </div>
@@ -50,34 +50,34 @@
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="Email" class="control-label"></label>
+                            <label asp-for="Email" class="form-label"></label>
                             <input asp-for="Email" class="form-control" id="Email" value="@Model.Email" readonly>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="PhoneNumber" class="control-label"></label>
+                            <label asp-for="PhoneNumber" class="form-label"></label>
                             <input asp-for="PhoneNumber" class="form-control" id="PhoneNumber" value="@Model.PhoneNumber" readonly>
                         </div>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="form-group">
-                        <label asp-for="Info" class="control-label"></label>
+                        <label asp-for="Info" class="form-label"></label>
                         <textarea asp-for="Info" class="form-control" id="Info" value="@Model.Info" readonly></textarea>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="Avatar" class="control-label"></label>
-                            <input asp-for="Avatar" class="form-control" id="Avatar" value="@Model.Avatar">
+                            <label asp-for="Avatar" class="form-label"></label>
+                            <input asp-for="Avatar" class="form-control" id="Avatar" value="@Model.Avatar" readonly>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="File" class="control-label">Upload an image file</label>
-                            <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
+                            <label asp-for="File" class="form-label">Upload an image file</label>
+                            <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;" readonly/>
                             <span asp-validation-for="File" class="text-danger"></span>
                         </div>
                     </div>
