--- a/NotifyMe.API/Views/Users/PartialViews/EditPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/EditPartialView.cshtml
@@ -23,13 +23,13 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="GroupId">Group</label><br/>
-                                <select asp-for="GroupId" asp-items="ViewBag.Groups"></select>
+                                <label asp-for="GroupId" class="form-label">Group</label>
+                                <select asp-for="GroupId" asp-items="ViewBag.Groups" class="form-select"></select>
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="UserName" class="control-label"></label>
+                                <label asp-for="UserName" class="form-label"></label>
                                 <input asp-for="UserName" class="form-control" id="UserName" value="@Model.UserName">
                             </div>
                         </div>
@@ -37,13 +37,13 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="FirstName" class="control-label"></label>
+                                <label asp-for="FirstName" class="form-label"></label>
                                 <input asp-for="FirstName" class="form-control" id="FirstName" value="@Model.FirstName">
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="LastName" class="control-label"></label>
+                                <label asp-for="LastName" class="form-label"></label>
                                 <input asp-for="LastName" class="form-control" id="LastName" value="@Model.LastName">
                             </div>
                         </div>
@@ -51,33 +51,33 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Email" class="control-label"></label>
+                                <label asp-for="Email" class="form-label"></label>
                                 <input asp-for="Email" class="form-control" id="Email" value="@Model.Email">
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="PhoneNumber" class="control-label"></label>
+                                <label asp-for="PhoneNumber" class="form-label"></label>
                                 <input asp-for="PhoneNumber" class="form-control" id="PhoneNumber" value="@Model.PhoneNumber">
                             </div>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="form-group">
-                            <label asp-for="Info" class="control-label"></label>
+                            <label asp-for="Info" class="form-label"></label>
                             <textarea asp-for="Info" class="form-control" id="Info" value="@Model.Info"></textarea>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Avatar" class="control-label"></label>
+                                <label asp-for="Avatar" class="form-label"></label>
                                 <input asp-for="Avatar" class="form-control" id="Avatar" value="@Model.Avatar">
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="File" class="control-label">Upload an image file</label>
+                                <label asp-for="File" class="form-label">Upload an image file</label>
                                 <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
                                 <span asp-validation-for="File" class="text-danger"></span>
                             </div>
