Implemented the saving of NotificationUser and displaying of Notification

--- a/NotifyMe.API/Views/Notifications/Index.cshtml
+++ b/NotifyMe.API/Views/Notifications/Index.cshtml
@@ -6,7 +6,7 @@
     var user = await UserManager.GetUserAsync(User);
 }
 
-@model ICollection<Notification>
+@model IEnumerable<Notification>
 
 @{
     Layout = "_Layout";
